[gd_scene load_steps=5 format=2]

[ext_resource path="res://PlayerPopup.gd" type="Script" id=1]
[ext_resource path="res://GFX/metalPanel_plate.png" type="Texture" id=2]
[ext_resource path="res://GFX/glassPanel.png" type="Texture" id=3]
[ext_resource path="res://Button.gd" type="Script" id=4]

[node name="PlayerPopup" type="Popup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -120.0
margin_right = 240.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color( 0.235294, 0.235294, 0.235294, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_vertical = 3
texture = ExtResource( 3 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
bbcode_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -28.0
margin_right = 223.0
margin_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="NinePatchRect2/VBoxContainer"]
margin_right = 448.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="buttonLabel" type="Label" parent="NinePatchRect2/VBoxContainer/Button"]
margin_top = 10.0
margin_right = 449.0
align = 1
autowrap = true
[connection signal="pressed" from="NinePatchRect2/VBoxContainer/Button" to="." method="_on_Button_pressed"]
